  predicate was used in any route, the router would raise an exception when
  trying to print the route debugging information.  This bug has existed
  since 1.3a1.

- When the ``traverse`` predicate was used in any route, ``proutes`` and
  ``pviews`` console scripts would raise an exception when trying to print
  the route debugging information.  This bug has existed since 1.3a1.

1.3.3 (2012-08-10)
==================

- Backport bug fix from master: Explicit url dispatch regexes can now contain
  colons.  https://github.com/Pylons/pyramid/issues/629

- Backport bug fix from master: On at least one 64-bit Ubuntu system under
  Python 3.2, using the ``view_config`` decorator caused a ``RuntimeError:
  dictionary changed size during iteration`` exception.  It no longer does.
  See https://github.com/Pylons/pyramid/issues/635 for more information.

- Backport bug fix from master: - In Mako Templates lookup, check if the uri
  is already adjusted and bring it back to an asset spec. Normally occurs with
  inherited templates or included components.
  https://github.com/Pylons/pyramid/issues/606
  https://github.com/Pylons/pyramid/issues/607

1.3.2 (2012-05-19)
==================

- Version 1.3.1 was a brownbag release, at very least on Windows and possibly
  on other operating systems, due to the existence of a stray ``"package``
  directory (quote included) in the root directory of the 1.3.1 tarball.
  This directory and its contents was present because the tarball was created
  using a release version of ``setuptools-git`` rather than a
  ``setuptools-git`` installed from a checkout.  The only change in this
  release is to correct the packaging error in 1.3.1.

1.3.1 (2012-05-19)
==================

Bug Fixes
---------

- Add ``REMOTE_ADDR`` to the ``prequest`` WSGI environ dict for benefit of
  the debug toolbar, which effectively requires it to be present to work
  properly.

- When an asset specification was used as a Mako ``renderer=`` argument and a