@@ -10,6 +10,11 @@ Next release
   ``pviews`` console scripts would raise an exception when trying to print
   the route debugging information.  This bug has existed since 1.3a1.
 
+- Backport bug fix from master: - In Mako Templates lookup, check for 
+  absolute uri (using mako directories) when mixing up inheritance with 
+  asset specs.
+  https://github.com/Pylons/pyramid/issues/662
+
 1.3.3 (2012-08-10)
 ==================
 
